--- a/src/app/components/master-detail/master.component.html
+++ b/src/app/components/master-detail/master.component.html
@@ -2,8 +2,9 @@
 <div class="row">
     <div class="col-1"> </div>
     <div class="col-10"> 
-        <h1>Ejemplo de Maestro - Detalle</h1>
+        <h1>Ejercicio: Maestro - Detalle</h1>
         <hr />
+        <br />
     </div>
     <div class="col-1"> </div>
 </div>
