--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,6 +20,9 @@
           <li class="nav-item">
             <a class="nav-link text-dark" [routerLink]="['/visor']">Visor de Imagenes</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link text-dark" [routerLink]="['/directives']">Directivas</a>
+          </li>          
         </ul>
       </div>
     </div>
