--- a/src/app/components/demo-directives/demo-directives.component.html
+++ b/src/app/components/demo-directives/demo-directives.component.html
@@ -22,7 +22,7 @@
 <br />
 <div class="row">
     <div class="col-1"> </div>
-    <div class="col-5"> 
+    <div class="col"> 
         <div class="form-group">
             <label><b>Color</b></label>
             <select class="form-select" name="color" [(ngModel)]="color" (change)="onChangeSelect()" >
@@ -30,7 +30,7 @@
             </select>
         </div>
     </div>
-    <div class="col-5"> 
+    <div class="col"> 
         <div class="form-group">
             <label><b>Color Mouse</b></label>
             <select class="form-select" name="color2" [(ngModel)]="color2">
@@ -38,6 +38,15 @@
             </select>
         </div>
     </div>    
+    <div class="col"> 
+        <div class="form-group">
+            <label><b>Mostrar</b></label>
+            <select class="form-select" name="isShow" [(ngModel)]="isShow">
+                <option value="true">Sí</option>
+                <option value="false">No</option>
+            </select>
+        </div>
+    </div>     
     <div class="col-1"> </div>
 </div>
 <br />
