--- a/src/app/components/master-detail/master.component.html
+++ b/src/app/components/master-detail/master.component.html
@@ -49,6 +49,7 @@
             <p><b>Fecha: </b> {{currentDate | date : 'dd/MM/yyyy'}}</p>
             <p><b>Observable: </b> {{time | async | date : 'medium'}}</p>
             <p><b>Pipe Code: </b> {{demo}} vs {{demoText}}</p>
+            <p><b>Number in Service: </b> {{demoNumber}}</p>
         </div>
     </div>
     <div class="col-5"> 
