--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,10 @@
           </li>
           <li class="nav-item">
             <a class="nav-link text-dark" [routerLink]="['/directives']">Directivas</a>
-          </li>          
+          </li>    
+          <li class="nav-item">
+            <a class="nav-link text-dark" [routerLink]="['/formtemplate']">Form Plantilla</a>
+          </li>                  
         </ul>
       </div>
     </div>
