--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,10 @@
           </li>    
           <li class="nav-item">
             <a class="nav-link text-dark" [routerLink]="['/formtemplate']">Form Plantilla</a>
-          </li>                  
+          </li>   
+          <li class="nav-item">
+            <a class="nav-link text-dark" [routerLink]="['/formreactive']">Form Reactivo</a>
+          </li>                         
         </ul>
       </div>
     </div>
