--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,7 +28,10 @@
           </li>   
           <li class="nav-item">
             <a class="nav-link text-dark" [routerLink]="['/formreactive']">Form Reactivo</a>
-          </li>                         
+          </li> 
+          <li class="nav-item">
+            <a class="nav-link text-dark" [routerLink]="['/customers']">Clientes</a>
+          </li>                                   
         </ul>
       </div>
     </div>
